--- a/portfolio/image/index.html
+++ b/portfolio/image/index.html
@@ -1,65 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gallery - My Portfolio</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Image Gallery</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f1f5f9;
+      background: #fafafa;
       margin: 0;
       padding: 20px;
     }
-
     h1 {
       text-align: center;
-      color: #0f172a;
+      color: #333;
     }
-
-    .gallery {
+    #gallery {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
       gap: 15px;
       margin-top: 30px;
     }
-
-    .gallery img {
+    #gallery img {
       width: 100%;
+      height: 200px;
+      object-fit: cover;
       border-radius: 10px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-      transition: transform 0.3s ease;
+      transition: transform 0.3s;
     }
-
-    .gallery img:hover {
+    #gallery img:hover {
       transform: scale(1.05);
     }
-
-    .back {
-      display: block;
-      width: fit-content;
-      margin: 20px auto;
-      text-decoration: none;
-      color: white;
-      background-color: #0f172a;
-      padding: 10px 20px;
-      border-radius: 5px;
+    .upload-box {
+      text-align: center;
+      margin: 20px 0;
     }
-
-    .back:hover {
-      background-color: #1e293b;
+    input[type="file"] {
+      margin-top: 10px;
     }
   </style>
 </head>
 <body>
-  <h1>Gallery</h1>
+  <h1>Image Gallery</h1>
 
-  <div class="gallery">
-    <img src="img/photo1.jpg" alt="Portfolio Image 1">
-    <img src="img/photo2.jpg" alt="Portfolio Image 2">
-    <img src="img/photo3.jpg" alt="Portfolio Image 3">
+  <div class="upload-box">
+    <input type="file" id="uploadImage" accept="image/*" />
+    <button id="uploadBtn">Upload Image</button>
   </div>
 
-  <a class="back" href="../index.html">← Back to Portfolio</a>
+  <div id="gallery"></div>
+
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
+    import { getStorage, ref, uploadBytes, getDownloadURL, listAll } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-storage.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyCqBs3z1sHmfoqO5-R6IH-epqbp9ypt9GE",
+      authDomain: "ismailjalam-a74e4.firebaseapp.com",
+      projectId: "ismailjalam-a74e4",
+      storageBucket: "ismailjalam-a74e4.firebasestorage.app",
+      messagingSenderId: "791455932737",
+      appId: "1:791455932737:web:e2537d83c9277a1ad541c0",
+      measurementId: "G-QVE0DHCNKD"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const storage = getStorage(app);
+    const galleryDiv = document.getElementById("gallery");
+    const uploadBtn = document.getElementById("uploadBtn");
+    const uploadImage = document.getElementById("uploadImage");
+
+    async function loadGallery() {
+      const listRef = ref(storage, 'gallery/');
+      const res = await listAll(listRef);
+      galleryDiv.innerHTML = '';
+      for (const item of res.items) {
+        const url = await getDownloadURL(item);
+        const img = document.createElement('img');
+        img.src = url;
+        galleryDiv.appendChild(img);
+      }
+    }
+
+    uploadBtn.addEventListener('click', async () => {
+      const file = uploadImage.files[0];
+      if (!file) return alert("Select an image first!");
+      const storageRef = ref(storage, 'gallery/' + file.name);
+      await uploadBytes(storageRef, file);
+      alert("Uploaded successfully!");
+      loadGallery();
+    });
+
+    loadGallery();
+  </script>
 </body>
 </html>
