--- a/portfolio/images/index.html
+++ b/portfolio/images/index.html
@@ -1,98 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Image Gallery</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #fafafa;
-      margin: 0;
-      padding: 20px;
-    }
-    h1 {
-      text-align: center;
-      color: #333;
-    }
-    #gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-      gap: 15px;
-      margin-top: 30px;
-    }
-    #gallery img {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-      transition: transform 0.3s;
-    }
-    #gallery img:hover {
-      transform: scale(1.05);
-    }
-    .upload-box {
-      text-align: center;
-      margin: 20px 0;
-    }
-    input[type="file"] {
-      margin-top: 10px;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Image Gallery - BrightLearn</title>
+<style>
+body { margin:0; font-family: 'Segoe UI', sans-serif; background: #1e3c72; color: #fff;}
+header { text-align:center; padding:30px; background: rgba(0,0,0,0.2); backdrop-filter: blur(6px); }
+header h1 { margin:0; font-size:2em; }
+.gallery { display:grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap:20px; padding:30px; max-width:1000px; margin:auto;}
+.gallery img { width:100%; border-radius:12px; transition: transform 0.3s, box-shadow 0.3s; }
+.gallery img:hover { transform: scale(1.05); box-shadow: 0 8px 20px rgba(0,0,0,0.4); }
+footer { text-align:center; padding:15px; background: rgba(0,0,0,0.1); color:#cce0ff;}
+</style>
 </head>
 <body>
-  <h1>Image Gallery</h1>
 
-  <div class="upload-box">
-    <input type="file" id="uploadImage" accept="image/*" />
-    <button id="uploadBtn">Upload Image</button>
-  </div>
+<header>
+<h1>Image Gallery</h1>
+<p>All your images will appear below</p>
+</header>
 
-  <div id="gallery"></div>
+<div class="gallery" id="gallery"></div>
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
-    import { getStorage, ref, uploadBytes, getDownloadURL, listAll } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-storage.js";
+<footer>© 2025 BrightLearn — Ismail Abdullahi Idris</footer>
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyCqBs3z1sHmfoqO5-R6IH-epqbp9ypt9GE",
-      authDomain: "ismailjalam-a74e4.firebaseapp.com",
-      projectId: "ismailjalam-a74e4",
-      storageBucket: "ismailjalam-a74e4.firebasestorage.app",
-      messagingSenderId: "791455932737",
-      appId: "1:791455932737:web:e2537d83c9277a1ad541c0",
-      measurementId: "G-QVE0DHCNKD"
-    };
+<script>
+// Static filenames array
+const images = [
+  'image1.jpg',
+  'image2.png',
+  'image3.jpg',
+  // Add more images here
+];
 
-    const app = initializeApp(firebaseConfig);
-    const storage = getStorage(app);
-    const galleryDiv = document.getElementById("gallery");
-    const uploadBtn = document.getElementById("uploadBtn");
-    const uploadImage = document.getElementById("uploadImage");
+const gallery = document.getElementById('gallery');
 
-    async function loadGallery() {
-      const listRef = ref(storage, 'gallery/');
-      const res = await listAll(listRef);
-      galleryDiv.innerHTML = '';
-      for (const item of res.items) {
-        const url = await getDownloadURL(item);
-        const img = document.createElement('img');
-        img.src = url;
-        galleryDiv.appendChild(img);
-      }
-    }
+if(images.length === 0){
+  gallery.innerHTML = '<p>No images yet.</p>';
+} else {
+  images.forEach(file => {
+    const img = document.createElement('img');
+    img.src = `images/${file}`;
+    img.alt = file;
+    gallery.appendChild(img);
+  });
+}
+</script>
 
-    uploadBtn.addEventListener('click', async () => {
-      const file = uploadImage.files[0];
-      if (!file) return alert("Select an image first!");
-      const storageRef = ref(storage, 'gallery/' + file.name);
-      await uploadBytes(storageRef, file);
-      alert("Uploaded successfully!");
-      loadGallery();
-    });
-
-    loadGallery();
-  </script>
 </body>
 </html>
