--- a/contact-me/index.html
+++ b/contact-me/index.html
@@ -154,34 +154,35 @@
   © 2025 Ismail Abdullahi Idris
 </footer>
 
-<!-- Firebase SDK -->
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-
 <script>
-  // Firebase config naka
+  // Initialize Firebase
   const firebaseConfig = {
     apiKey: "AIzaSyCqBs3z1sHmfoqO5-R6IH-epqbp9ypt9GE",
     authDomain: "ismailjalam-a74e4.firebaseapp.com",
+    databaseURL: "https://ismailjalam-a74e4-default-rtdb.firebaseio.com",
     projectId: "ismailjalam-a74e4",
-    storageBucket: "ismailjalam-a74e4.firebasestorage.app",
+    storageBucket: "ismailjalam-a74e4.appspot.com",
     messagingSenderId: "791455932737",
     appId: "1:791455932737:web:452e30144d283124d541c0",
     measurementId: "G-VCP1LJL56G"
   };
 
-  // Initialize Firebase
-  const app = firebase.initializeApp(firebaseConfig);
+  firebase.initializeApp(firebaseConfig);
   const database = firebase.database();
 
-  // Handle form submission
   const commentForm = document.getElementById('commentForm');
   const successMsg = document.getElementById('successMsg');
 
   commentForm.addEventListener('submit', (e) => {
     e.preventDefault();
-    const name = document.getElementById('name').value;
-    const comment = document.getElementById('comment').value;
+
+    const name = document.getElementById('name').value.trim();
+    const comment = document.getElementById('comment').value.trim();
+
+    if (!name || !comment) {
+      alert('Please fill the form!');
+      return;
+    }
 
     const newCommentRef = database.ref('comments').push();
     newCommentRef.set({
@@ -192,6 +193,11 @@
     .then(() => {
       successMsg.style.display = 'block';
       commentForm.reset();
+
+      // Hide the success message after 3 seconds
+      setTimeout(() => {
+        successMsg.style.display = 'none';
+      }, 3000);
     })
     .catch((err) => {
       alert('Error: ' + err.message);
